<resources>
    <string name="app_name">BeansTalk</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registation">Registration</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_card">My Card</string>
    <string name="title_activity_address">My Address</string>
    <string name="title_activity_order">My Order</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_password_conf">Confirm Password </string>
    <string name="prompt_name">Name </string>
    <string name="prompt_phone">Phone </string>
    <string name="prompt_delivery_address">Delivery Address </string>
    <string name="prompt_address_line1">Line 1</string>
    <string name="prompt_address_line2">Line 2</string>
    <string name="prompt_address_city">City</string>
    <string name="prompt_address_state">State</string>
    <string name="prompt_address_country">Country</string>
    <string name="prompt_address_pincode">Pincode</string>
    <string name="prompt_card_details">Card Details</string>
    <string name="prompt_card_name">Holder Name</string>
    <string name="prompt_card_number">Account Number</string>
    <string name="prompt_card_cvv">cvv Number</string>


    <string name="action_sign_in">Sign in</string>
    <string name="action_account">Create Account?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_back_login">Back To SignIn</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="chat_btn">Go To Shopping...</string>
</resources>
