<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.lkrb.beanstalk.CardActivity">

    <TextView
        style="@style/form_label_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name" />

    <TextView
        android:id="@+id/tv_card_name"
        style="@style/form_label_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        style="@style/form_label_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_card_number" />

    <TextView
        android:id="@+id/tv_card_number"
        style="@style/form_label_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        style="@style/form_label_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_card_cvv" />

    <TextView
        android:id="@+id/tv_card_cvv"
        style="@style/form_label_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>
